Token authentication and fly way migrations