@@ -4,56 +4,77 @@ import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import lombok.RequiredArgsConstructor;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
+import org.wesley.ecommerce.application.domain.enumeration.UserType;
 import org.wesley.ecommerce.application.domain.model.User;
 import org.wesley.ecommerce.application.service.UserService;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
+@RequiredArgsConstructor
 public class SecurityFilter extends OncePerRequestFilter {
+    private static final Logger logger = LoggerFactory.getLogger(SecurityFilter.class);
     private final TokenService tokenService;
     private final UserService userService;
 
-    public SecurityFilter(TokenService tokenService, UserService userService) {
-        this.tokenService = tokenService;
-        this.userService = userService;
-    }
-
-
     @Override
-    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain) throws ServletException, IOException {
-        var token = this.recoveryToken(request);
+    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain)
+            throws ServletException, IOException {
+        String token = this.recoveryToken(request);
+        logger.debug("Token recebido: {}", token);
 
         if (token != null && !token.isEmpty()) {
-            var login = tokenService.validateToken(token);
+            String userEmail = tokenService.validateToken(token);
+            logger.debug("Email extraído do token: {}", userEmail);
 
-            if (login != null) {
-                User user = userService.findByEmail(login);
-                List<SimpleGrantedAuthority> authorities = Arrays.asList(
-                        new SimpleGrantedAuthority("ADMIN"),
-                        new SimpleGrantedAuthority("CUSTOMER")
-                );
-                var authentication = new UsernamePasswordAuthenticationToken(user, null, authorities);
-                SecurityContextHolder.getContext().setAuthentication(authentication);
+            if (userEmail != null) {
+                User user = userService.findByEmail(userEmail);
+                if (user != null) {
+                    logger.debug("Usuário encontrado: {}", user.getEmail());
+
+                    List<SimpleGrantedAuthority> authorities = List.of(
+                            new SimpleGrantedAuthority("ROLE_" + user.getUserType().name())
+                    );
+
+                    UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(
+                            user,
+                            null,
+                            authorities
+                    );
+
+                    authentication.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
+
+                    SecurityContextHolder.getContext().setAuthentication(authentication);
+                    logger.debug("Autenticação configurada para o usuário: {}", user.getEmail());
+                } else {
+                    logger.warn("Usuário não encontrado para o email: {}", userEmail);
+                }
+            } else {
+                logger.warn("Token inválido ou expirado");
             }
+        } else {
+            logger.debug("Nenhum token encontrado no header Authorization");
         }
+
         filterChain.doFilter(request, response);
     }
 
-
     private String recoveryToken(HttpServletRequest request) {
-        var authHeader = request.getHeader("Authorization");
+        String authHeader = request.getHeader("Authorization");
         if (authHeader == null || !authHeader.startsWith("Bearer ")) {
             return null;
         }
-        return authHeader.replace("Bearer ", "");
+        return authHeader.substring(7);
     }
-
 }
